--- a/.env_sample
+++ b/.env_sample
@@ -1,9 +1,12 @@
-OPENAI_API_KEY= #Authentication with OpenAI
-MODEL_NAME= #OpenAI Model to use
-OUTPUT_DIRECTORY= #resulting text file is here, one per recording
-INPUT_DIRECTORY= #files to be acted on
-DEFAULT_TEMP= #temp if not specified in prompts.txt
-ALLOWED_EXTENSIONS = #formats accepted by Whisper
-MAX_FILE_SIZE_MB = #max file size accepted by Whisper
-OUTPUT_SEPARATOR = #Separates the original transcript from the modified text in the text file.
-PROMPTS_FILE= #prompts.txt
+OPENAI_API_KEY=
+MODEL_NAME='gpt-3.5-turbo-16k'
+OUTPUT_DIRECTORY='./output'
+AUDIO_DIRECTORY='./audio'
+DEFAULT_TEMP='0.2' 
+ALLOWED_EXTENSIONS = ['mp3', 'mp4', 'mpeg', 'mpga', 'm4a', 'wav', 'webm']
+MAX_FILE_SIZE_MB = '25'
+OUTPUT_SEPARATOR = "**********"
+PROMPT_DIR='./prompts'
+WHISPER_MODEL='whisper-1'
+CONTEXT='You are a helpful assistant.'
+MAX_TOKENS='10000'
